# pamagent

./: .buildinfo  .gitignore  .pyup.yml  .travis.yml  CHANGELIST.md  MANIFEST.in  Makefile  README.MD  build-wheels.sh  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  rust_setuptools.py  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: environment.pickle  index.doctree
_modules/: index.html
_modules/pamagent/: transaction_cache.html
docs/source/: conf.py  index.rst
pamagent/: agent.py  trace.py  transaction.py  transaction_cache.py  web_transaction.py  wrapper.py
pamagent/hooks/: _dbapi2.py  dbapi2.py  django_hook.py  mysql_hook.py  psycopg2_hook.py  redis_hook.py  requests_hook.py  sqlite_hook.py
pamagent/tests/: test_transaction.py  test_wrappers.py  urls.py
pamagent/tests/hooks/: test_psycopg2_hook.py
pamagent/utils/: sql_statement.py
pamcore/: Cargo.toml
pamcore/src/: core.rs  lib.rs  logging.rs  output.rs
source/: conf.py
