[package]

name = "pamagent_core"
version = "0.2.1"
authors = ["PushAMP LLC <devcore@pushamp.com>"]

[lib]
name = "pamagent_core"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
hyper = "*"
hyper-native-tls = "0.2.2"
native-tls = "0.1"
lazy_static = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.3"
url = "1.4"
backoff = "0.1.2"
log = "0.4"
fern = "0.5"
chrono = "0.4"

[dependencies.pyo3]
version = "0.2.5"
features = ["extension-module"]


